# google-cli

./: .gitignore  README.md  pyproject.toml
google_cli/: __init__.py  __main__.py  app.py  app.tcss  markup.py  models.py  urls.py  webapps.py
google_cli/engine/: __init__.py  fetch.py  readability.py  render.py
google_cli/search/: __init__.py  base.py  bing.py  duckduckgo.py  google_api.py  multi.py
google_cli/state/: __init__.py  bookmarks.py  config.py  history.py  store.py  tabs.py
google_cli/widgets/: __init__.py  menu.py  omnibox.py  page_view.py  statusbar.py  tabbar.py  toolbar.py
tests/: test_markup.py  test_render.py  test_search.py  test_urls.py
