[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "google-cli"
version = "0.1.0"
description = "A clean, Chrome-styled web browser that lives entirely in your terminal."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Brayden Boyko", email = "brayden@boykowealth.com" }]
keywords = ["browser", "terminal", "tui", "cli", "chrome", "textual", "web"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Terminals",
]
dependencies = [
    "textual>=0.79",
    "httpx>=0.27",
    "readability-lxml>=0.8.1",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "platformdirs>=4.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.urls]
Homepage = "https://github.com/boykowealth/google-cli"
Repository = "https://github.com/boykowealth/google-cli"

[project.scripts]
google = "google_cli.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["google_cli"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
